--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <li>
                 <a href="index.html">literally this page</a>
             </li>
+            <li>
+                <a href="stuff/gravity_sim.html">gravity thing</a>
+            </li>
         </ul>
         </div>
 
