--- a/stuff/gravity_sim.html
+++ b/stuff/gravity_sim.html
@@ -5,8 +5,7 @@
     </head>
 <body>
         <canvas id="myCanvas"></canvas>
-        //deltatime slider from 0 to 5
-        //step is 0.1
+        <p>deltatime slider from 0 to 10</p>
         <input type="range" min="0" max="10" value="0.02" step="0.01" id="deltaTime">
 
 
