--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <li>
                 <a href="stuff/gravity_sim.html">gravity thing</a>
             </li>
+            <li>
+                <a href="stuff/turtles.html">turtles</a>
+            </li>
         </ul>
         </div>
 
