--- a/stuff/turtles.html
+++ b/stuff/turtles.html
@@ -30,6 +30,11 @@
     <script src="./turtle_ai.js"></script>
 
     <script>
+
+
+
+
+
         class tile{
             constructor(type,x,y){
                 this.type = type;
@@ -159,8 +164,9 @@
 
                         let tile = this.tiles[x][y];
                         if(tile.blocked)
-                        {
-                            ctx.fillStyle = "red";
+                        {   
+                            //light green
+                            ctx.fillStyle = "rgba(200,20,20,0.5)";
                             ctx.fillRect(x*10,y*10,10,10);
                         }
                         else
@@ -194,6 +200,7 @@
                 this.targetY = y;
                 this.id = id;
                 this.ai=new ScriptAI(ai,world,this);
+                this.life=10;
             }
 
             get tile(){
@@ -229,13 +236,71 @@
                 this.targetX = Math.max(0,Math.min(targetX,this.world.width-1));
                 this.targetY = Math.max(0,Math.min(targetY,this.world.height-1));
             }
+            consume(targetX,targetY){
+                //attempt to consume turtles at target
+                //has range of 3
+                //consume radius is 1
+                let distance = Math.sqrt(Math.pow(targetX-this.x,2)+Math.pow(targetY-this.y,2));
+                if(distance<3){
+                //find member of turtles array within 1 length of target
+                //use array.find
+                let targetTurtle=turtles.find(turtle=>{
+                    let distance = Math.sqrt(Math.pow(targetX-turtle.x,2)+Math.pow(targetY-turtle.y,2));
+                    if(distance<1.5){
+                        return true;
+                    }
+                });
+                //if found, subtract 5 life and transfer to this
+                if(targetTurtle){
+                    this.life+=4;
+                    targetTurtle.life-=5;
+                    //if target turtle is dead, remove from array
+                    if(targetTurtle.life<=0){
+                        turtles.splice(turtles.indexOf(targetTurtle),1);
+                    }
+                } else {
+                    //if not found, subtract 1 life
+                    this.life-=2;
+                    //if life is less than 0, remove from array
+                    if(this.life<=0){
+                        turtles.splice(turtles.indexOf(this),1);
+                    }
+                }
+            }
+
+
+            }
+
             render(){
                 let ctx = this.world.canvas.getContext("2d");
                 //draw a small green turtle
-                ctx.fillStyle = "green";
+                //color is green if life is above 8, red if below 8
+                //yellow if above 15
+                //only do this below 20 health
+                ctx.fillStyle = "green";	
+                if(this.life<8){
+                    ctx.fillStyle = "red";
+                }
+                if(this.life>15){
+                    ctx.fillStyle = "yellow";
+                }
+                
+                if(this.life<16){
                 ctx.beginPath();
                 ctx.arc(this.x*10+5,this.y*10+5,5,0,2*Math.PI);
                 ctx.fill();
+                } else
+                {
+                    //draw a red square with small white area on the top right side
+                    ctx.fillStyle = "red";
+                    ctx.fillRect(this.x*10+6,this.y*10+1,2,8);
+                    ctx.fillRect(this.x*10+2,this.y*10+1,2,8);
+                    ctx.fillRect(this.x*10,this.y*10+3,2,4);
+                    ctx.fillRect(this.x*10+4,this.y*10,2,6);
+                    ctx.fillStyle = "white";
+                    ctx.fillRect(this.x*10+5,this.y*10+2,3,2);
+
+                }
 
 
 
