--- a/stuff/turtles.html
+++ b/stuff/turtles.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Turtles</title>
+        <script href="title.js"></script>
         <link rel="stylesheet" type="text/css" href="../style.css">
     </head>
 
