--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                 <a href="stuff/gravity_sim.html">gravity thing</a>
             </li>
             <li>
-                <a href="stuff/turtles.html">turtles</a>
+                <a href="stuff/turtles.html">amogus simulator</a>
+            </li>
+            <li>
+                <a href="stuff/cursor.html">bubble wrap simulator</a>
             </li>
         </ul>
         </div>
