--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <li>
                 <a href="stuff/cursor.html">bubble wrap simulator</a>
             </li>
+            <li>
+                <a href="stuff/pythsus.html">bad pythsus interpreter</a>
+            </li>
         </ul>
         </div>
 
