--- a/games/engine/test.html
+++ b/games/engine/test.html
@@ -11,7 +11,7 @@
         Vars.renderer = new canvasRenderer(document.getElementById("game"));
         Vars.world.objects.push(new rect(3, 5, 6,2,2,0.2,7));
         Vars.world.objects.push(new rect(3, 8, 7,2,2,0,1.7));
-        //Vars.world.objects.push( new wall(2,35,20,2));
+        Vars.world.objects.push( new wall(2,35,20,2));
 
         //frame
         let lastTime = performance.now();
