--- a/games/engine/test.html
+++ b/games/engine/test.html
@@ -9,8 +9,18 @@
     <script>
         Vars.world = new world(64, 64);
         Vars.renderer = new canvasRenderer(document.getElementById("game"));
-        Vars.world.objects.push(new rect(0.25, 5, 6,2,2,0.2,7));
-        Vars.world.objects.push(new rect(0.3, 8, 7,2,2,1.7,1.7));
+        Vars.world.objects.push(new rect(0.25, 5, 6,2,2,0.8,7));
+        //push some random rects
+        for(var i = 0; i < 10; i++){
+            //dont touch size
+            //vary x,y,vx,vy
+            //x between 0 and 30
+            //y between 5 and 30
+            //vx between -1 and 1
+            //vy between -1 and 1
+            Vars.world.objects.push(new rect(Math.random()*2, Math.random()*30, Math.random()*30+3, 3, 3, Math.random()*2-1, Math.random()*2-1));
+        }
+
         //wall box
         Vars.world.objects.push(new wall(2,2,2,30));
         Vars.world.objects.push(new wall(2,2,30,2));
@@ -27,7 +37,7 @@
         let frame = function(time){
             let delta = (time - lastTime);
             lastTime = time;
-            Vars.world.update(delta/600);
+            Vars.world.update(delta/6000);
             Vars.renderer.render(Vars.world);
             requestAnimationFrame(frame);
         }
