--- a/games/engine/test.html
+++ b/games/engine/test.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <canvas id="game" width="600" height="600"></canvas>
+        <p>blue dot: center of mass</br>red line: from center of mass to origin of the cluster</br>blue line: force being applied</p>
     
     <script>
         Vars.world = new world(64, 64);
