--- a/games/engine/test.html
+++ b/games/engine/test.html
@@ -6,7 +6,7 @@
     <body>
         <canvas id="game" width="600" height="600"></canvas>
         <p>blue dot: center of mass</br>red line: from center of mass to origin of the cluster</br>blue line: force being applied</p>
-    
+        <p>(clicking does nothing, this site isnt interactive)</p>
     <script>
         Vars.world = new world(64, 64);
         Vars.renderer = new canvasRenderer(document.getElementById("game"));
