--- a/games/engine/test.html
+++ b/games/engine/test.html
@@ -17,34 +17,34 @@
 
     <script>
         function reset() {
-            //Vars.world = new world(64, 64);
         let testCluster = new cluster(new vector(16, 15),Math.floor(Math.random()*1000));
         let testpart1 = new clusterPart(testCluster,"ohno",2,0,0,1);
         let testpart2 = new clusterPart(testCluster,"ohno",1,0,0,1);
         let testpart3 = new clusterPart(testCluster,"ohno",0,0,0,1);
         let testpart4 = new clusterPart(testCluster,"ohno",-1,0,0,1);
         let testpart5 = new clusterPart(testCluster,"ohno",-2,0,0,1);
-        testCluster.members.push(testpart1);
-        testCluster.members.push(testpart2);
-        testCluster.members.push(testpart3);
-        testCluster.members.push(testpart4);
-        testCluster.members.push(testpart5);
+        testCluster.addPart(testpart1);
+        testCluster.addPart(testpart2);
+        testCluster.addPart(testpart3);
+        testCluster.addPart(testpart4);
+        testCluster.addPart(testpart5);
+        
 
         let testCluster2 = new cluster(new vector(Math.random()*20, Math.random()*20),Math.floor(Math.random()*1000));
         let testpart1b = new clusterPart(testCluster2,"ohno",2,0,0,1);
         let testpart2b = new clusterPart(testCluster2,"ohno",1,0,0,1);
         let testpart3b = new clusterPart(testCluster2,"ohno",0,0,0,1);
-        let testpart4b = new clusterPart(testCluster2,"ohno",-1,0,0,1);
-        let testpart5b = new clusterPart(testCluster2,"ohno",-2,0,0,1);
-        testCluster2.members.push(testpart1b);
-        testCluster2.members.push(testpart2b);
-        testCluster2.members.push(testpart3b);
-        testCluster2.members.push(testpart4b);
-        testCluster2.members.push(testpart5b);
-        
+        let testpart4b = new clusterPart(testCluster2,"ohno",0,1,0,1);
+        let testpart5b = new clusterPart(testCluster2,"ohno",0,2,0,1);
+        testCluster2.addPart(testpart1b);
+        testCluster2.addPart(testpart2b);
+        testCluster2.addPart(testpart3b);
+        testCluster2.addPart(testpart4b);
+        testCluster2.addPart(testpart5b);
 
-        Vars.world.clusters.push(testCluster2);
+
         Vars.world.clusters.push(testCluster);
+        Vars.world.clusters.push(testCluster2);
 
         //apply random force to cluster
         let force = new vector(Math.random()*3, Math.random()*2);
