add to homepage

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <li>
                 <a href="stuff/pythsus.html">bad pythsus interpreter</a>
             </li>
+            <li>
+                <a href="games/engine/test.html">game engine test</a>
+            </li>
         </ul>
         </div>
 
