--- a/games/engine/test.html
+++ b/games/engine/test.html
@@ -8,7 +8,7 @@
         <canvas id="game" width="600" height="600"></canvas>
         <p>blue dot: center of mass</br>red line: from center of mass to origin of the cluster</br>blue line: force being applied</p>
 
-        <input type="button" value="reset" onclick="reset()">
+        <input type="button" value="spawn random stuff" onclick="reset()">
 
     <script>
 
