--- a/games/engine/test.html
+++ b/games/engine/test.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <canvas id="game" width="600" height="600"></canvas>
-        <p>blue dot: center of mass</br>red line: from center of mass to origin of the cluster</br>blue line: force being applied</p>
+        <p>blue dot: center of mass</br>red line: from center of mass to origin of the cluster</br>blue line: force being applied</br>red circle: collision checking distance</p>
 
         <input type="button" value="spawn random stuff" onclick="reset()">
 
