--- a/games/engine/test.html
+++ b/games/engine/test.html
@@ -55,7 +55,7 @@
         Vars.renderer = new canvasRenderer(document.getElementById("game"));
         Vars.inputs = new inputHandler(document.getElementById("game"));
         
-        Vars.world.walls.push(new staticCollider(2,2,15,15,0));
+        //Vars.world.walls.push(new staticCollider(2,2,15,15,0));
         //frame
         let lastTime = performance.now();
         let frame = function(time){
