--- a/games/engine/test.html
+++ b/games/engine/test.html
@@ -7,10 +7,8 @@
     <body>
         <canvas id="game" width="600" height="600"></canvas>
         <p>blue dot: center of mass</br>red line: from center of mass to origin of the cluster</br>blue line: force being applied</br>red circle: collision checking distance</p>
-
         <input type="button" value="spawn random stuff" onclick="reset()">
         <input type="checkbox" id="gravity">
-
     <script>
 
 
@@ -54,8 +52,8 @@
         Vars.world = new world(64, 64);
         Vars.renderer = new canvasRenderer(document.getElementById("game"));
         Vars.inputs = new inputHandler(document.getElementById("game"));
-        
-        //Vars.world.walls.push(new staticCollider(2,2,15,15,0));
+
+        Vars.world.walls.push(new staticCollider(7,15,9,2));
         //frame
         let lastTime = performance.now();
         let frame = function(time){
