--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
                 <a href="stuff/cursor.html">bubble wrap simulator</a>
             </li>
             <li>
-                <a href="stuff/pythsus.html">bad pythsus interpreter</a>
-            </li>
-            <li>
                 <a href="games/engine/test.html">game engine test</a>
             </li>
         </ul>
         </div>
-
+        //make the background an iframe that is empty for now
+        <iframe id="backgroundIframe" src="" frameborder="0" allowfullscreen></iframe>
 
 <script type="importmap">
 {
@@ -65,6 +63,18 @@
         renderer.render(scene, camera);
     };
     animate();
+
+
+    //read contents of https://github.com/end-me-please/cursor-gaming/blob/main/ngrok.url
+    //and set the iframe src to that url
+    const getUrl = async () => {
+        const response = await fetch('https://end-me-please.github.io/cursor-gaming/ngrok.url');
+        const text = await response.text();
+        document.querySelector('#backgroundIframe').src = text;
+    }
+    getUrl();
+    
+
 
 
 
