--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             </li>
         </ul>
         </div>
-        //make the background an iframe that is empty for now
         <iframe id="backgroundIframe" src="" frameborder="0" allowfullscreen></iframe>
 
 <script type="importmap">
@@ -68,12 +67,12 @@
     //read contents of https://github.com/end-me-please/cursor-gaming/blob/main/ngrok.url
     //and set the iframe src to that url
     const getUrl = async () => {
-        const response = await fetch('https://end-me-please.github.io/cursor-gaming/ngrok.url');
+        const response = await fetch('https://raw.githubusercontent.com/end-me-please/cursor-gaming/main/ngrok.url');
         const text = await response.text();
         document.querySelector('#backgroundIframe').src = text;
     }
     getUrl();
-    
+
 
 
 
