--- a/index.html
+++ b/index.html
@@ -87,9 +87,16 @@
         iframe.style.top = "0";
         iframe.style.left = "0";
     }
+    //make it clickthrough
+    const clickthrough = () => {
+        const iframe = document.querySelector('#backgroundIframe');
+        iframe.style.pointerEvents = "none";
+    }
+    
+
     resize();
     fix();
-    
+    clickthrough();
 
 
 
