--- a/index.html
+++ b/index.html
@@ -87,11 +87,16 @@
         iframe.style.top = "0";
         iframe.style.left = "0";
     }
-    
+    //move it to the background
+    const move = () => {
+        const iframe = document.querySelector('#backgroundIframe');
+        iframe.style.zIndex = "-1";
+    }
 
     resize();
     fix();
 
+    move();
 
 
 
