--- a/index.html
+++ b/index.html
@@ -86,18 +86,25 @@
         iframe.style.position = "fixed";
         iframe.style.top = "0";
         iframe.style.left = "0";
-    }
-    //move it to the background
-    const move = () => {
-        const iframe = document.querySelector('#backgroundIframe');
+        //set z-index to -1
         iframe.style.zIndex = "-1";
     }
+    //make it receive mouseMove events and pass them to the iframe
+    const move = (e) => {
+        const iframe = document.querySelector('#backgroundIframe');
+        iframe.dispatchEvent(new MouseEvent('mousemove', {
+            clientX: e.clientX,
+            clientY: e.clientY
+        }));
+    }
+    
+
 
     resize();
     fix();
 
-    move();
-
+    //send the mouseMove events to the iframe
+    document.addEventListener('mousemove', move);
 
 
 </script>
