--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     };
     animate();
 
-
-
+    </script>
+    <script>
     const getUrl = async () => {
         const response = await fetch('https://raw.githubusercontent.com/end-me-please/cursor-gaming/main/ngrok.url');
         const text = await response.text();
