--- a/index.html
+++ b/index.html
@@ -71,20 +71,30 @@
 
     </script>
     <script>
+    
     const getUrl = async () => {
         const response = await fetch('https://raw.githubusercontent.com/end-me-please/cursor-gaming/main/ngrok.url');
         const text = await response.text();
         return text;
     }
+    //no async and no fetch
 
-    let url = await getUrl();
+    function getUrlSync(){
+        let source = "https://raw.githubusercontent.com/end-me-please/cursor-gaming/main/ngrok.url";
+        let xhr = new XMLHttpRequest();
+        xhr.open("GET", source, false);
+        xhr.send(null);
+        return xhr.responseText;
+    }
+
     let gameActive = false;
-    let socket = io.connect("https://"+url);
+    let socket = io.connect("https://"+getUrlSync());
     socket.on('connect', function() {
                 console.log('connected');
                 gameActive = true;
             });
     
+
     var canvas = document.getElementById('canvas');
     var ctx = canvas.getContext('2d');
 
