--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     let gameActive = false;
     let cursors = [];
-
+    let socket = {};
     setTimeout(()=>{
     let socket = io.connect("https://"+getUrlSync()+"/")
 
