--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
                     //draw cursor
                     for(let i = 0; i < cursors.length; i++){
                         ctx.beginPath();
-                        ctx.arc(cursors[i].x, cursors[i].y, 10, 0, Math.PI*2);
+                        ctx.arc(cursors[i].x, cursors[i].y, 4, 0, Math.PI*2);
                         ctx.fillStyle = '#0095DD';
                         ctx.fill();
                         ctx.closePath();
-                        ctx.font = "16px Arial";
+                        ctx.font = "13px Arial";
                         //black text
                         ctx.fillStyle = "#000000";
                         ctx.fillText(cursors[i].name, cursors[i].x, cursors[i].y);   
@@ -157,7 +157,7 @@
             let clientClick = false;
             let clientY = 0;
             //on mouse move
-            document.addEventListener('mousemove', function(e){
+            canvas.addEventListener('mousemove', function(e){
                 clientX = e.clientX;
                 clientY = e.clientY;
             });
