--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
         </ul>
         </div>
 
-        <input type="text" id="name" value="unnamed">
         <input type="button" id="join" value="join">
         <canvas id="canvas" class="genericCanvas" width="530px" height="530px"></canvas>
+        
+        <input type="text" top="10%" left="10%" id="name" value="unnamed">
 
 
 
