--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         </ul>
         </div>
 
-        <input type="button" id="join" value="join">
         <canvas id="canvas" class="genericCanvas" width="530px" height="530px"></canvas>
-        
-        <input type="text" top="10%" left="10%" id="name" value="unnamed">
-
+        <div top="10%" left="10%" position="absolute" id="multiplayer">
+        <input type="button" id="join" value="join">
+        <input type="text" id="name" value="unnamed">
+        </div>
 
 
 <script type="importmap">
