--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             let clientClick = false;
             let clientY = 0;
             //on mouse move
-            canvas.addEventListener('mousemove', function(e){
+            document.addEventListener('mousemove', function(e){
                 clientX = e.clientX;
                 clientY = e.clientY;
             });
