--- a/index.html
+++ b/index.html
@@ -31,9 +31,13 @@
         </div>
 
         <canvas id="canvas" class="genericCanvas" width="530px" height="530px"></canvas>
-        <div top="10%" left="10%" position="absolute" id="multiplayer">
-        <input type="button" id="join" value="join">
-        <input type="text" id="name" value="unnamed">
+        //place the div in bottom left corner
+
+        <div id="multi" position = "absolute" style="position: absolute; bottom: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); display: none;">
+            <div id="multiInner" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 400px; height: 400px; background-color: rgba(255,255,255,0.5); display: none;">
+                <input type="button" id="join" value="join">
+                <input type="text" id="name" value="unnamed">
+            </div>
         </div>
 
 
